--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                         <div class="right">
                               <img src="kisspng-jeans-denim-cobalt-blue-waist-trousers-trouser-png-transparent-images-5a897cbf2feb86.6712422415189598071963.jpg" class="draggable pant"/>
                               <img src="hatt.png" class="draggable hatt"/>
-                              <img src="https://cdn-icons-png.flaticon.com/512/44/44255.png" class="draggable shirt"/>           
+                              <img src="https://cdn-icons-png.flaticon.com/512/44/44255.png" class="draggable shirt"/> 
+                              <img src="https://cdn-icons-png.flaticon.com/512/743/743420.png" class="draggable face"/> 
                         </div>
                   </div>
            </div>
