--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
       </head>
 
       <body>
-            <div class="row">
-                  <img src="logo.png" id="logo">
-            </div> 
-            <br>
-            <div class="container">
-                  <div class="row"> <br>
-                        <div class="left"> 
-                              <img src="human.jpg" class="filltable"> 
-                        </div>
-                        <div class="right">
-                              <img src="kisspng-jeans-denim-cobalt-blue-waist-trousers-trouser-png-transparent-images-5a897cbf2feb86.6712422415189598071963.jpg" class="draggable pant"/>
-<!--                               <img src="hatt.png" class="draggable hatt"/> -->
-                              <img src="https://cdn-icons-png.flaticon.com/512/44/44255.png" class="draggable shirt"/> 
-                              <img src="https://cdn-icons-png.flaticon.com/512/743/743420.png" class="draggable face"/> 
-                        </div>
-                  </div>
+    <div class="row">
+        <img src="images/logo.png" id="logo">
+  </div> 
+  <br>
+  <div class="container">
+        <div class="row"> <br>
+              <div class="left"> 
+                    <img src="images/stickman.png" class="filltable"> 
+              </div>
+              <div class="right">
+                    <img src="images/shirt_05.png" class="draggable shirt"/>
+                    <img src="https://cdn-icons-png.flaticon.com/512/743/743420.png" class="draggable face"/>  
+                    <img src="images/pants_04.png" class="draggable pants" alt=""/>         
+                    <img src="images/shoe_01_R.png" class="draggable shoe" alt=""> 
+                    <img src="images/shoe_01_L.png" class="draggable shoe" alt="">
+              </div>
+        </div>
+ </div>
            </div>
       </body>
 </html>
