--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <div class="container">
         <div class="row"> <br>
               <div class="left"> 
-                    <img src="images/stickman.png" class="filltable"> 
+                    <img src="stickman.png" class="filltable"> 
               </div>
               <div class="right">
-                    <img src="images/shirt_05.png" class="draggable shirt"/>
+                    <img src="shirt_05.png" class="draggable shirt"/>
                     <img src="https://cdn-icons-png.flaticon.com/512/743/743420.png" class="draggable face"/>  
-                    <img src="images/pants_04.png" class="draggable pants" alt=""/>         
-                    <img src="images/shoe_01_R.png" class="draggable shoe" alt=""> 
-                    <img src="images/shoe_01_L.png" class="draggable shoe" alt="">
+                    <img src="pants_04.png" class="draggable pants" alt=""/>         
+                    <img src="shoe_01_R.png" class="draggable shoe" alt=""> 
+                    <img src="shoe_01_L.png" class="draggable shoe" alt="">
               </div>
         </div>
  </div>
