--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
       <body>
     <div class="row">
-        <img src="images/logo.png" id="logo">
+        <img src="logo.png" id="logo">
   </div> 
   <br>
   <div class="container">
